Bug 282353 - In dolphin 1.99 when trying to select items they disappear from the view and are not selectable
Summary: In dolphin 1.99 when trying to select items they disappear from the view and ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-19 13:59 UTC by Lilian A. Moraru
Modified: 2011-12-21 01:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lilian A. Moraru 2011-09-19 13:59:23 UTC
Version:           1.99 (using Devel) 
OS:                Linux

I installed dolphin(v1.99 as of date 2011.08.07) from project-neon( http://techbase.kde.org/Getting_Started/Using_Project_Neon_to_contribute_to_KDE ) and there are no doubts that he's Awesome but I found a bug.

When you try to select more items and drag "slowly"(or fast but hold the mouse beyond dolphin window for a little while) the selection to the bottom(and only to the bottom) the items from the view start to disappear and even more interesting, they are not selectable, even if I select an item before it disappear and press enter after it disappeared it will not get opened.

It doesn't matter in which view mode you are. In icons view mode items start to disappear from the top-left to the right(first to last). In Details view mode items start to disappear from the top to the bottom(first to last).

Take a look at the video attached.

Reproducible: Always

Steps to Reproduce:
I explained.


Expected Results:  
Obvious. :)
Comment 1 Lilian A. Moraru 2011-09-19 14:06:02 UTC
The file is 3 MB so I can't attach it, here is a link: http://youtu.be/0KX_bsROroI?hd=1
Comment 2 Peter Penz 2011-09-19 14:08:32 UTC
Very cool bug, thanks for reporting this (I was not aware about this yet).
Comment 3 Peter Penz 2011-12-20 22:08:16 UTC
Git commit 8942de3e6881b34897d4d255bdf8bd2924cfa996 by Peter Penz.
Committed on 20/12/2011 at 23:05.
Pushed by ppenz into branch 'KDE/4.8'.

Fix autoscroll issue when selecting items

If items get selected with the rubberband the scroll offset must stay inside
the visible range.

BUG: 282353
FIXED-IN: 4.8.0

M  +3    -1    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/8942de3e6881b34897d4d255bdf8bd2924cfa996
Comment 4 Peter Penz 2011-12-20 22:08:38 UTC
Git commit 49a7eb63530e7909598019232d90bc81ab8b90aa by Peter Penz.
Committed on 20/12/2011 at 23:05.
Pushed by ppenz into branch 'master'.

Fix autoscroll issue when selecting items

If items get selected with the rubberband the scroll offset must stay inside
the visible range.

BUG: 282353
FIXED-IN: 4.8.0

M  +3    -1    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/49a7eb63530e7909598019232d90bc81ab8b90aa
Comment 5 Lilian A. Moraru 2011-12-21 01:14:07 UTC
Thanks for solving it. Dying to use Dolphin 2 in Kubuntu 12.04.